--- a/G1.html
+++ b/G1.html
@@ -21,7 +21,7 @@
             <li>Burpees – 6 reps 3 sets</li>
             <li>Star jumps – 6 reps 3 sets </li>
             <li>Sit-ups - 25</li>
-            <li>Plank 1 min sets (30 sec break)</li>
+            <li>Plank 1 min 3 sets (30 sec break)</li>
                
         </ul>
     </p>
