--- a/Plan.html
+++ b/Plan.html
@@ -8,7 +8,7 @@
     
 </head>
 <body>
-    <header class="header"><a href="Main.html"><img src="FitYou.png" class="header-logo"></a></header>   
+    <header class="header"><a href="index.html"><img src="FitYou.png" class="header-logo"></a></header>   
     <div class="container3">
     <p class="para">
         <br>
