--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     
     <body class="body1">    
-        <header class="header"><a href="Main.html"><img src="FitYou.png" class="header-logo"></a></header>   
+        <header class="header"><a href="index.html"><img src="FitYou.png" class="header-logo"></a></header>   
         <br><br><br>      
         <div class="container">            
             <h1>Are You Ready To Get Fit?</h1>
@@ -22,7 +22,7 @@
 
 <!--***************Footer****************-->        
         <footer class="footer">
-            <a href="Main.html">
+            <a href="index.html">
                 <img src="FitYou.png">
             </a>
             <div class="footerStyles">
