--- a/ScheduleForm.html
+++ b/ScheduleForm.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <header class="header"><a href="Main.html"><img src="FitYou.png" class="header-logo"></a></header>   
+    <header class="header"><a href="index.html"><img src="FitYou.png" class="header-logo"></a></header>   
     <div id="container">
     <form name="details">
         <label>Choose your Gender</label><br>
