--- a/Plan.html
+++ b/Plan.html
@@ -40,7 +40,7 @@
         </div>
 
         <footer class="footer">
-            <a href="Main.html">
+            <a href="index.html">
                 <img src="FitYou.png">
             </a>
             <div class="footerStyles">
